Prevent inset borders from overlapping with full-bleed content.

--- a/packages/editor/src/components/block-list/style.scss
+++ b/packages/editor/src/components/block-list/style.scss
@@ -129,23 +129,31 @@
 	}
 
 	// Selected style.
-	&.is-selected > .editor-block-list__block-edit::before {
-		// Use opacity to work in various editor styles.
-		outline: $border-width solid $dark-opacity-light-500;
-		box-shadow: inset ($border-width * 3) 0 0 0 $dark-opacity-500;
+	&.is-selected {
 
-		.is-dark-theme & {
-			outline-color: $light-opacity-light-500;
-			box-shadow: inset ($border-width * 3) 0 0 0 $light-opacity-600;
-		}
-
-		// Switch to outset borders on larger screens.
-		@include break-small() {
-			box-shadow: ($border-width * -3) 0 0 0 $dark-opacity-500;
+		> .editor-block-list__block-edit::before {
+			// Use opacity to work in various editor styles.
+			outline: $border-width solid $dark-opacity-light-500;
+			box-shadow: inset ($border-width * 3) 0 0 0 $dark-opacity-500;
 
 			.is-dark-theme & {
-				box-shadow: ($border-width * -3) 0 0 0 $light-opacity-600;
+				outline-color: $light-opacity-light-500;
+				box-shadow: inset ($border-width * 3) 0 0 0 $light-opacity-600;
 			}
+
+			// Switch to outset borders on larger screens.
+			@include break-small() {
+				box-shadow: ($border-width * -3) 0 0 0 $dark-opacity-500;
+
+				.is-dark-theme & {
+					box-shadow: ($border-width * -3) 0 0 0 $light-opacity-600;
+				}
+			}
+		}
+
+		// Prevent inset borders from overlapping full-bleed block content.
+		&[data-align="full"] > .editor-block-list__block-edit::before {
+			box-shadow: none;
 		}
 	}
 
